fix: reducing the stack trace in case of big exception message